Added tmux to Pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -17,4 +17,5 @@ python_version = "3.8"
 [scripts]
 loop = "python -m app.loop"
 main = "python -m app.main"
+tmux = "tmux new-session -d -s satania 'python -m app.loop'"
 docker = "docker-compose -f docker-compose.yml up -d --build --remove-orphans"
