--- a/Pipfile
+++ b/Pipfile
@@ -20,7 +20,9 @@ python_version = "3.8"
 loop = "python -m app.loop"
 once = "python -m app.once"
 tmux = "tmux new-session -d -s satania 'python -m app.loop'"
-docker = "docker-compose -f docker-compose.yml up -d --build --remove-orphans"
 shiv-build = "./extras/shiv.sh"
 shiv-run-loop = "./satania-loop.pyz"
 shiv-run-once = "./satania-once.pyz"
+podman-build = "sudo -E ./extras/podman-build.sh"
+podman-push = "./extras/podman-push.sh"
+k8s-deploy = "sudo -E ./extras/k8s-deploy.sh"
